Chapter 4 Rails flavored ruby

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -35,6 +35,7 @@ en:
   vi: "Vietnamese"
   home: "Home"
   help: "Help"
+  base_title: "Ruby on Rails Tutorials"
   simple_pages:
     home:
       title: "This is home page"
