--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -13,3 +13,28 @@ vi:
       welcome: "Chào mừng bạn đến với Ruby on Rails"
     help:
       title: "Đây là trang trợ giúp"
+  users:
+    no_exist: "Tài khoản này không tồn tại trên hệ thống"
+    new:
+      title: "Đăng ký"
+      name: "Họ tên"
+      password: "Mật khẩu"
+      password_confirmation: "Xác nhận mật khẩu"
+      signup_success: "Đăng ký thành công"
+      signup_fail: "Đăng ký tài khoản không thành công"
+  activerecord:
+    errors:
+      models:
+        user:
+          attributes:
+            email:
+              taken: "Địa chỉ email đã tồn tại"
+              invalid: "Địa chỉ email không đúng định dạng"
+              blank: "Địa chỉ email không được bỏ trống"
+            name:
+              blank: "Họ tên không được bỏ trống"
+            password:
+              blank: "Mật khẩu không được bỏ trống"
+            password_confirmation:
+              confirmation: "Mật khẩu không khớp"
+              blank: "Mật khẩu không được bỏ trống"
