--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -22,6 +22,8 @@ vi:
     logout_success: "Đã đăng xuất thành công"
     remember_me: "Ghi nhớ đăng nhập"
     no_have_account: "Bạn chưa có tài khoản ?"
+    not_login: "Bạn cần đăng nhập để thực hiện"
+    incorrect_user: "Yêu cầu không thể thực hiện"
   users:
     no_exist: "Tài khoản này không tồn tại trên hệ thống"
     new:
@@ -31,6 +33,18 @@ vi:
       password_confirmation: "Xác nhận mật khẩu"
       signup_success: "Đăng ký thành công"
       signup_fail: "Đăng ký tài khoản không thành công"
+    edit:
+      update: "Cập nhật"
+      title: "Cập nhật thông tin cá nhân"
+      update_success: "Cập nhật thông tin thành công"
+      update_fail: "Cập nhật không thành công"
+    index:
+      title: "Danh sách nguời dùng"
+      avatar: "Ảnh"
+      delete: "Xóa"
+      confirm: "Bạn có chắc chắn muốn xóa tài khoản này ?"
+      delete_success: "Bạn đã xóa thành công"
+      delete_fail: "Bạn đã xóa không thành công"
   activerecord:
     errors:
       models:
@@ -47,3 +61,10 @@ vi:
             password_confirmation:
               confirmation: "Mật khẩu không khớp"
               blank: "Mật khẩu không được bỏ trống"
+  views:
+    pagination:
+      first: "« ĐẦU"
+      last: "CUỐI »"
+      previous: "‹ TRƯỚC"
+      next: "SAU ›"
+      truncate: "…"
